    led to several changes and cleanups. Notably, parallel testing is now much
    simpler and more like sequential testing.

  * Test reporting works entirely correctly when tests are run in parallel.

  * If you "use Test::Class::Moose bare => 1" you will no longer get
    Test::Most exported into your class. Instead, you can load the testing
    module(s) of your choice.

  * Test class instances now have a $self->test_instance_name method.

  [BUG FIXES]

  * Fixed a bug in how test methods were counted. When a test class or method
    was entirely skipped by setting $self->test_skip, the method or classes
    were still included in the count returned by the report object's
    num_test_methods method.

0.69     2016-04-28

  [BUG FIXES]

  * Explicitly load Test::Most in Test::Class::Moose. Earlier versions of
    Import::Into would not load this for us, leading to all sorts of
    errors. Reported by Philipp Gortan. (GitHub issue #62)

0.68     2016-04-26

  [ENHANCEMENTS]

  * If you "use Test::Class::Moose bare => 1" you will no longer get
    Test::Most exported into your class. Instead, you can load the testing
    module(s) of your choice.

0.67     2015-11-30

  [ENHANCEMENTS]

  * Same as 0.66, but repeating changes from 0.63 since there's a bunch of
    them.

  * Added a new method to Test::Class::Moose::Report, timing_data. This
    returns a complex data structure containing timing data for all levels of
    test suite. This is useful if you want to store test run timing data for
    later analysis.

  * Added a new report object, Test::Class::Moose::Report::Class. Each class
    that is tested gets one of these reports. The Class report in turn
    contains 1+ Instance reports, which in turn contains 1+ Method reports.

  * The TCM::Report::Instance class now has two new methods,
    test_startup_method and test_shutdown_method. These methods return
    TCM::Report::Method objects with information about these control methods.
