@@ -244,13 +244,15 @@ sub test_setup    { }
 sub test_teardown { }
 sub test_shutdown { }
 
+sub run_test_shutdown_on_skip {0}
+
 __PACKAGE__->meta->make_immutable;
 
 1;
 
 __END__
 
-=for Pod::Coverage Tags Tests runtests
+=for Pod::Coverage Tags Tests runtests run_test_shutdown_on_skip
 
 =head1 SYNOPSIS
 
@@ -530,7 +532,8 @@ you're about to run, you can do this:
     $test->next::method;
  }
 
-Runs at the end of each test method.
+Runs at the end of each test method. This method is always run, even if the
+method was skipped.
 
 =head2 C<test_shutdown>
 
@@ -541,6 +544,10 @@ Runs at the end of each test method.
  }
 
 Runs at the end of each test class.
+
+By default, this is not run if the test class is skipped entirely. You can
+override the C<run_test_shutdown_on_skip> in your class to return a true value
+in order to force this method to be run when the class is skipped.
 
 =head2 Overriding Test Control Methods
 
